Реализовал обработку архивов со списками студентов